# air_quality_sensor

./: README.md  create_dataset.py  pyproject.toml
config/: config.json
notebooks/: config.ipynb  create_data.ipynb  eda.ipynb  initial_explore.ipynb  model_building.ipynb  open_weather.ipynb  openaq_api.ipynb
openaq_api/: load_data.py
src/: air_quality_data.py  config.py  weather_data.py
